# Persona-Herencia

./: Albanil.cpp  Albanil.h  Arquitecto.cpp  Arquitecto.h  CMakeLists.txt  MaestroAlbanil.cpp  MaestroAlbanil.h  Persona.cpp  Persona.h  main.cpp
